--- a/.github/workflows/check-scripts.yml
+++ b/.github/workflows/check-scripts.yml
@@ -6,13 +6,6 @@ on:
 jobs:
   commit:
     runs-on: ubuntu-latest
-    if: >-
-      !(
-        contains(github.event.head_commit.message, '[ci skip]') ||
-        contains(github.event.head_commit.message, '[skip ci]') ||
-        contains(github.event.head_commit.message, '[actions skip]') ||
-        contains(github.event.head_commit.message, '[skip actions]')
-      )
     steps:
     - uses: actions/checkout@v1
     - name: Download checker
@@ -23,4 +16,4 @@ jobs:
         rm -rf ignis-test
     - name: Run checker
       run: |
-        ./script_syntax_check
+        ./script_syntax_check .
